--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,37 @@ body, h1, h2, h3, p, ul, li, a {
     color : white;
     z-index : 1;
     }
+
+    #thankYou {
+        background-color: #e0e0e0;  /* Slightly darker gray for the message box */
+        border-radius: 8px;
+        width: 50%;
+        margin: 100px auto;
+        padding: 20px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        font-size: 2.5em;
+            color: #333;
+            margin-bottom: 20px;
+    }
+
+    .recorded {
+        font-size: 1.2em;
+        color: #555;  /* Slightly lighter gray for text */
+        margin-bottom: 20px;
+    }
+    .home-button {
+        background-color: #6c757d;  /* Dark gray */
+        color: white;
+        padding: 10px 20px;
+        font-size: 1.1em;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    
     nav ul li {
     margin : 0 15px;
     }
@@ -332,21 +363,18 @@ body, h1, h2, h3, p, ul, li, a {
     footer a:hover {
     text-decoration : underline;
     }
-    #services .service-grid {
-    display : grid;
-    grid-template-columns : repeat(auto-fit,minmax(300px,1fr));
-    gap : 20px;
+    .service-grid {
+        display: flex;
+       
     }
+    
     .service {
-    background-color : #fff;
-    border-radius : 5px;
-    padding : 20px;
-    box-shadow : 0 2px 5px rgb(0, 0, 0, 0.1);
-    }
-    .service img {
-    max-width : 100%;
-    height : auto;
-    margin-bottom : 1rem;
+        width: 50%;
+        margin: 10px;
+        display: block;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
     }
     .testimonial-container {
     display : flex;
@@ -369,43 +397,5 @@ body, h1, h2, h3, p, ul, li, a {
     text-align : center;
     margin-bottom : 20px;
     }
-    .slideshow-container {
-    max-width : 800px;
-    position : relative;
-    margin : auto;
-    }
-    .slide {
-    display : none;
-    text-align : center;
-    transition : opacity 1s ease-in-out;
-    }
-    .slide:first-child {
-    display : block;
-    }
-    .slide img {
-    max-width : 500px;
-    height : auto;
-    margin-bottom : 10px;
-    }
-    .prev, .next {
-    cursor : pointer;
-    position : absolute;
-    top : 50%;
-    width : auto;
-    margin-top : -22px;
-    padding : 16px;
-    color : white;
-    font-weight : bold;
-    font-size : 18px;
-    transition : 0.6s ease;
-    border-radius : 0 3px 3px 0;
-    user-select : none;
-    }
-    .prev {
-    left : 0;
-    background-color : rgb(0, 0, 0, 0.5);
-    }
-    .next {
-    right : 0;
-    background-color : rgb(0, 0, 0, 0.5);
-    }
+    
+   
